# mast-multiphysics

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.md  PostInstall.cmake  README.md  install.txt  mast.pc.in
doc/: .gitignore  .htaccess  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  README.md  deploy_docs.sh  deploy_rsa.enc  installation.dox  main.dox  source_install.dox  spack_install.dox  tutorial_doc.py  tutorials.dox
doc/install/: install.dox  install_centos_7_dvd_gnomeDesktop_src_online.dox  install_centos_8_dvd_serverWithGUI_src_online.dox  install_rhel7_offline_noroot.dox  install_rhel7_online.dox  install_ubuntu_1804_apt.dox  install_ubuntu_1804_src_online.dox  install_ubuntu_1910_apt.dox  install_ubuntu_2004_apt.dox
doc/tutorials/: tutorials.dox  tutorials_fluid.dox  tutorials_fsi.dox  tutorials_heat_transfer.dox  tutorials_structural.dox
examples/example_3/: .CMakeLists.txt.swp  CMakeLists.txt  constrain_beam_dofs.cpp  constrain_beam_dofs.h  example_3.cpp
examples/example_5/: CMakeLists.txt  example_5.cpp
examples/example_6/: CMakeLists.txt  example_6.cpp
examples/structural/: CMakeLists.txt
src/: CMakeLists.txt
src/aeroelasticity/: CMakeLists.txt  displacement_function_base.h  flutter_root_base.cpp  flutter_root_base.h  flutter_root_crossover_base.cpp  flutter_root_crossover_base.h  flutter_solution_base.cpp  flutter_solution_base.h  flutter_solver_base.cpp  flutter_solver_base.h  frequency_function.cpp  frequency_function.h  pk_flutter_root.cpp  pk_flutter_root.h  pk_flutter_root_crossover.cpp  pk_flutter_root_crossover.h  pk_flutter_solution.cpp  pk_flutter_solution.h  pk_flutter_solver.cpp  pk_flutter_solver.h  time_domain_flutter_root.cpp  time_domain_flutter_root.h  time_domain_flutter_root_base.cpp  time_domain_flutter_root_base.h  time_domain_flutter_root_crossover.cpp  time_domain_flutter_root_crossover.h  time_domain_flutter_solution.cpp  time_domain_flutter_solution.h  time_domain_flutter_solver.cpp  time_domain_flutter_solver.h  ug_flutter_root.cpp  ug_flutter_root.h  ug_flutter_root_crossover.cpp  ug_flutter_root_crossover.h  ug_flutter_solution.cpp  ug_flutter_solution.h  ug_flutter_solver.cpp  ug_flutter_solver.h
src/base/: CMakeLists.txt  assembly_base.cpp  assembly_base.h  assembly_elem_operation.cpp  assembly_elem_operation.h  boundary_condition_base.h  complex_assembly_base.cpp  complex_assembly_base.h  complex_assembly_elem_operations.cpp  complex_assembly_elem_operations.h  complex_mesh_field_function.cpp  complex_mesh_field_function.h  computation_base.h  compute_kernel.h  compute_kernel_base.h  constant_field_function.cpp  constant_field_function.h  dof_coupling_base.cpp  dof_coupling_base.h  eigenproblem_assembly.cpp  eigenproblem_assembly.h  eigenproblem_assembly_elem_operations.cpp  eigenproblem_assembly_elem_operations.h  eigensystem_assembly.h  elem_base.cpp  elem_base.h  expression_field_function.cpp  expression_field_function.h  expression_vector_field_function.cpp  expression_vector_field_function.h  field_function_base.h  function_base.cpp  function_base.h  function_set_base.cpp  function_set_base.h  linearized_assembly_base.cpp  linearized_assembly_base.h  mast_config.h.in  mast_data_types.h  mesh_field_function.cpp  (+27 more)
src/boundary_condition/: CMakeLists.txt  dirichlet_boundary_condition.cpp  dirichlet_boundary_condition.h  dirichlet_dof_boundary_condition.cpp  dirichlet_dof_boundary_condition.h  flexible_surface_motion.cpp  flexible_surface_motion.h  function_surface_motion.cpp  function_surface_motion.h  point_load_condition.cpp  point_load_condition.h  rigid_surface_motion.cpp  rigid_surface_motion.h  small_disturbance_pressure.cpp  small_disturbance_pressure.h  surface_motion_base.cpp  surface_motion_base.h
src/coordinates/: CMakeLists.txt  basis_matrix_coordinate.cpp  basis_matrix_coordinate.h  coordinate_base.cpp  coordinate_base.h  polar_coordinate.cpp  polar_coordinate.h
src/driver/: driver_base.cpp  driver_base.h
src/elasticity/: CMakeLists.txt  bending_operator.cpp  bending_operator.h  bending_structural_element.cpp  bending_structural_element.h  bernoulli_bending_operator.h  center_of_mass_output.cpp  center_of_mass_output.h  complex_normal_rotation_mesh_function.cpp  complex_normal_rotation_mesh_function.h  compliance_output.cpp  compliance_output.h  displacement_output.cpp  displacement_output.h  displacement_output_v1.cpp  displacement_output_v1.h  dkt_bending_operator.h  elasticity_elem_operations.h  external_force_output.cpp  external_force_output.h  first_mass_moments_of_inertia_output.cpp  first_mass_moments_of_inertia_output.h  fluid_structure_assembly_elem_operations.cpp  fluid_structure_assembly_elem_operations.h  fsi_generalized_aero_force_assembly.cpp  fsi_generalized_aero_force_assembly.h  kinematic_coupling.cpp  kinematic_coupling.h  kinematic_coupling_constraint.cpp  kinematic_coupling_constraint.h  ks_stress_output.cpp  ks_stress_output.h  level_set_stress_assembly.cpp  level_set_stress_assembly.h  mass_output.cpp  mass_output.h  mass_products_of_inertia_output.cpp  mass_products_of_inertia_output.h  mindlin_bending_operator.cpp  mindlin_bending_operator.h  (+53 more)
src/fluid/: CMakeLists.txt  conservative_fluid_discipline.cpp  conservative_fluid_discipline.h  conservative_fluid_element_base.cpp  conservative_fluid_element_base.h  conservative_fluid_system_initialization.cpp  conservative_fluid_system_initialization.h  conservative_fluid_transient_assembly.cpp  conservative_fluid_transient_assembly.h  flight_condition.h  fluid_base.cpp  fluid_base.h  fluid_elem_base.cpp  fluid_elem_base.h  frequency_domain_linearized_complex_assembly.cpp  frequency_domain_linearized_complex_assembly.h  frequency_domain_linearized_conservative_fluid_elem.cpp  frequency_domain_linearized_conservative_fluid_elem.h  frequency_domain_pressure_function.cpp  frequency_domain_pressure_function.h  gas_property.h  integrated_force_output.cpp  integrated_force_output.h  (+14 more)
tests/: CMakeLists.txt  GenerateTestDependencyGraph.py  GenerateTestResultsGraph.py  init_catch2.cpp  test_helpers.cpp  test_helpers.h
(+795 files in other folders)
